force-app/main/default/objects/Organization_Relationship__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>This field stores End Date for HCO-HCO relationship</description>
    <inlineHelpText>This field stores End Date for HCO-HCO relationship</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>