force-app/main/default/objects/Organization_Relationship__c/fields/From_Account__c.field-meta.xml
<CustomField>
    <fullName>From_Account__c</fullName>
    <complianceGroup>None</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores parent Account details for HCO-HCO relationship</description>
    <inlineHelpText>This field stores parent Account details for HCO-HCO relationship</inlineHelpText>
    <label>From Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Organization Relationships</relationshipLabel>
    <relationshipName>Organization_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>