force-app/main/default/objects/Organization_Relationship__c/fields/From_Organization__c.field-meta.xml
<CustomField>
    <fullName>From_Organization__c</fullName>
    <businessOwnerGroup>Customer_Master_Owners</businessOwnerGroup>
    <complianceGroup>None</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores parent Organization details for HCO-HCO relationship</description>
    <inlineHelpText>This field stores parent Organization details for HCO-HCO relationship</inlineHelpText>
    <label>From Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Organization Relationships (From Organization)</relationshipLabel>
    <relationshipName>Organization_Relationships2</relationshipName>
    <type>Lookup</type>
</CustomField>