force-app/main/default/objects/Organization_Relationship__c/fields/From_Organization_Status__c.field-meta.xml
<CustomField>
    <fullName>From_Organization_Status__c</fullName>
    <businessOwnerGroup>CRM_Customer_Master_Owners</businessOwnerGroup>
    <complianceGroup>None</complianceGroup>
    <description>To Store the status of From Organization status</description>
    <formula>TEXT(From_Organization__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Organization Status</label>
    <type>Text</type>
</CustomField>