force-app/main/default/objects/Organization_Relationship__c/fields/MDM_Id__c.field-meta.xml
<CustomField>
    <fullName>MDM_Id__c</fullName>
    <businessOwnerGroup>Customer_Master_Owners</businessOwnerGroup>
    <complianceGroup>None</complianceGroup>
    <description>This field stores MDM unique identifer for HCO-HCO relationship</description>
    <externalId>true</externalId>
    <inlineHelpText>This field stores MDM unique identifer for HCO-HCO relationship</inlineHelpText>
    <label>MDM Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>