force-app/main/default/objects/Organization_Relationship__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <businessOwnerGroup>Customer_Master_Owners</businessOwnerGroup>
    <complianceGroup>None</complianceGroup>
    <description>This field stores type of HCO-HCO relationship</description>
    <inlineHelpText>This field stores type of HCO-HCO relationship</inlineHelpText>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Managed</fullName>
            </value>
            <value>
                <fullName>ShipTo</fullName>
            </value>
            <value>
                <fullName>SoldTo</fullName>
            </value>
            <value>
                <fullName>BillTo</fullName>
            </value>
            <value>
                <fullName>Payer</fullName>
            </value>
            <value>
                <fullName>GroupPurchasingService</fullName>
            </value>
            <value>
                <fullName>DentalCareService</fullName>
            </value>
            <value>
                <fullName>TreatmentPlanningService</fullName>
            </value>
            <value>
                <fullName>ProductionService</fullName>
            </value>
            <value>
                <fullName>MentoringService</fullName>
            </value>
            <value>
                <fullName>ImagingService</fullName>
            </value>
            <value>
                <fullName>FinancingService</fullName>
            </value>
            <value>
                <fullName>AccountingService</fullName>
            </value>
            <value>
                <fullName>Leasing_RentalService</fullName>
            </value>
            <value>
                <fullName>InsuranceService</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>