force-app/main/default/objects/Organization_Relationship__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <businessOwnerGroup>CRM_Customer_Master_Owners</businessOwnerGroup>
    <complianceGroup>None</complianceGroup>
    <description>This is to store the KAFKA request JSON updatedtime</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>