force-app/main/default/objects/Organization_Relationship__c/fields/To_Organization__c.field-meta.xml
<CustomField>
    <fullName>To_Organization__c</fullName>
    <businessOwnerGroup>Customer_Master_Owners</businessOwnerGroup>
    <complianceGroup>None</complianceGroup>
    <description>This field stores child Organization for HCO-HCO relationship</description>
    <inlineHelpText>This field stores child Organization for HCO-HCO relationship</inlineHelpText>
    <label>To Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Organization Relationships (To Organization)</relationshipLabel>
    <relationshipName>Organization_Relationships1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>