force-app/main/default/objects/Organization_Relationship__c/fields/To_Organization_Status__c.field-meta.xml
<CustomField>
    <fullName>To_Organization_Status__c</fullName>
    <businessOwnerGroup>CRM_Customer_Master_Owners</businessOwnerGroup>
    <complianceGroup>None</complianceGroup>
    <description>To store the status of To Organization</description>
    <formula>TEXT(To_Organization__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Organization Status</label>
    <type>Text</type>
</CustomField>